--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
@@ -67,6 +67,8 @@ $(function(){
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
+		serverSide: true,
+		deferLoading: false,		
 		columns : [
 			{// 컬럼에 checkbox 설정
 				name: "chk",
