--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/display/list.html
@@ -76,6 +76,8 @@ $(function(){
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true, 
 		scrollY: 100,
+		serverSide: true,
+		deferLoading: false,		
 		columns : [
 			{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]"},//Claim No.
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},// Line Item.
@@ -171,7 +173,10 @@ $(function(){
 				$("#FORM_search").attr("action", "[[${BASE_PATH}]]/claim/display/view").submit();
 			}
 		}
-	});			
+	});
+
+	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
+	_defaultLoading({ loaded: function() { doSearch(); } });	
 });
 
 function doSearch()
