--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -852,7 +852,7 @@ $(function(){
 					p.fileName = $("#fileName").val();
 				};
 				
-				//처음 한번만 불러오고 이후부터는 입력받은 품번으로 시뮬레이션 실행
+				//History 테이블에 저장된 주문 내역을 가져와 셋업해 줌. 최초 한번만 불러오고 이후부터는 입력받은 품번으로 시뮬레이션을 실행하기 위해 값을 없앰
 				$("#ohhSeq").val("");
 			},
 			dataSrc: function(response)
@@ -955,6 +955,18 @@ $(function(){
 			doSimulation();
 		});
 	});
+});
+
+let fgDoneSimulation = GLOBAL_CONST.NO;
+$(document).ajaxStop(function() {
+	//시스뱅크 대리점재고 시스템에서 I/F 되어 넘어 온 주문일 경우 로딩과 함께 시뮬레이션해 준다.
+	if (JpUtilsString.equals("[[${simulationFrom}]]", "SB") && JpUtilsString.equals(fgDoneSimulation, GLOBAL_CONST.NO))
+	{
+		doSimulation();
+		
+		//시뮬레이션이 무한 반복되는 것을 방지하기 위해 값을 초기화 해 줌		
+		fgDoneSimulation = GLOBAL_CONST.YES;
+	};
 });
 </script>
 </th:block>
