--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
@@ -91,6 +91,8 @@ $(function(){
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
+		serverSide: true,
+		deferLoading: false,
 		columns : [
 			{data: "TKNUM", title: "[[#{HQP_L_SHIPMENT_NO}]]"},				
 			{data: "COUNT1", title: "[[#{HQP_L_HU_ITEMS}]]"},
@@ -147,6 +149,9 @@ $(function(){
 		$("#shipmentNo").val(rowData.TKNUM);
 		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/delivery/view").submit();
 	});
+	
+	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
+	_defaultLoading({ loaded: function() { doSearch(); } });	
 });
 // Search 버튼 클릭
 $("#BTN_search").on("click", function(){		
