--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
@@ -94,6 +94,8 @@ $(function(){
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
+		serverSide: true,
+		deferLoading: false,		
 		columns : [
 			{data: "VBELN", title: "[[#{HQP_L_INQUIRY_NO}]]"},//Inuqiry No.
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
@@ -201,7 +203,10 @@ $(function(){
 		let orderNo = $tableObj.row($(this)).data().VBELN2;		
 		
 		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
-	});		
+	});
+	
+	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
+	_defaultLoading({ loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
 });
 </script>	
 </th:block>
