--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -79,6 +79,8 @@ $(function(){
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
+		serverSide: true,
+		deferLoading: false,
 		columns : [
 			{data: "VBELN", title: "[[#{HQP_L_ORDER_NO}]]"},//Order No.
 			{data: "ZZAUKON", title: "[[#{HQP_L_ORDER_TYPE}]]"},//Order Type
@@ -181,6 +183,9 @@ $(function(){
 			$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/order/view").submit();
 		};
 	});
+	
+	//처음 접속 시에는 검색 실행하지 않음. 조회->상세보기->조회로 이동했을 때 화면 로딩과 함께 자동으로 검색이 실행되도록 할 때 사용
+	_defaultLoading({ loaded: function() { doSearch(); }, exceptionParams: ["pDocType"] });	
 });
 </script>	
 </th:block>
