반품생성시 잠조오더 팝업창 초기 검색 조건 삭제

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/reference/order/popup/list.html
@@ -22,7 +22,7 @@
 				<th th:text="#{HQP_L_ORDER_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pOrderNo" name="pOrderNo" class="custom-ui" th:value="${pOrderNo}">
+						<input type="text" id="pOrderNo" name="pOrderNo" class="custom-ui" th:value="${pOrderNo}" autofocus>
 					</div>
 				</td>
 				<th th:text="#{HQP_L_ORDER_DATE}"></th>
@@ -130,6 +130,13 @@ $(function(){
 	
 	function doSearch()
 	{
+		if (JpUtilsString.isAllEmpty([$("#pOrderNo").val(), $("#pFromDate").val(), $("#pToDate").val(), $("#pPartNo").val(), $("#pPoNo").val()]))
+		{
+			alert("[[#{HQP_M_EMPTY_QUERY}]]");
+			$("#pOrderNo").focus();
+			return;
+		};
+		
 		$tableObj.ajax.reload();
 	};
 
