--- a/src/main/resources/templates/platform/layout/popup/index.html
+++ b/src/main/resources/templates/platform/layout/popup/index.html
@@ -20,7 +20,7 @@
 	const GLOBAL_CONST = {
 		"YES": "[[${T(org.jwebppy.platform.core.PlatformCommonVo).YES}]]",
 		"NO": "[[${T(org.jwebppy.platform.core.PlatformCommonVo).NO}]]",
-		"ROW_PER_PAGE": [[${T(org.jwebppy.platform.core.PlatformCommonVo).DEFAULT_ROW_PER_PAGE}]]"
+		"ROW_PER_PAGE": "[[${T(org.jwebppy.platform.core.PlatformCommonVo).DEFAULT_ROW_PER_PAGE}]]"
 	};
 </script>
 	
