플랫폼 개발

--- a/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -97,7 +97,7 @@ function makeGnb()
 		{
 			menu.push("<div class='header item'>");
 			menu.push("<div class='ui black'>");		
-			menu.push("<i class='bars icon'></i>");
+			menu.push("<a href='[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]'><img src='/platform/img/common/doobizplus_s.png'></a>");
 			menu.push("</div>");
 			menu.push("</div>");			
 			
