부품기본정보 Scale 소비자가격 계산 오류 수정

--- a/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -124,7 +124,25 @@ $(document).ready(function() {
 								prompt: "Please input {name}."
 							}
 						]
-					},					
+					},
+					"Weight Format": {
+						identifier: "weightFormat",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},
+					"Quantity Format": {
+						identifier: "qtyFormat",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},
 					Country: {
 						identifier: "country",
 						rules: [
