--- a/src/main/resources/templates/platform/mgmt/conn_resource/write.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/write.html
@@ -203,7 +203,11 @@ $(document).ready(function() {
 					}
 					else
 					{
-						opener.doSearch();
+						try
+						{
+							opener.doSearch();							
+						}
+						catch (e) {}
 					};
 					
 					if (JpUtilsString.equals("[[${mode}]]", "copy"))
